--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@
                     </div>
                   </div>
                   <div class="heroSection">
-                    <img src="/projects/ladia/8.JPG" alt="" />
+                    <img src="/projects/ladia/1.JPG" alt="" />
                   </div>
                 </div>
 
@@ -1074,15 +1074,15 @@
                             <div class="moreInfo">
                               <div>
                                 <h4>Client</h4>
-                                <p>General Realestate</p>
+                                <p>Akhil</p>
                               </div>
                               <div>
                                 <h4>Typology</h4>
-                                <p>General Realestate</p>
+                                <p>Commercial</p>
                               </div>
                               <div>
                                 <h4>Size</h4>
-                                <p>1700 S.ft</p>
+                                <p>2500 S.ft</p>
                               </div>
                               <div>
                                 <h4>Status</h4>
@@ -1108,12 +1108,31 @@
                             </div>
                           </div>
                         </li>
-                        <li class="ss-carousel__item imgBlock vertical">
+                        <li class="ss-carousel__item imgBlock">
                           <img
                             class="ss-carousel__item__image"
                             src="/projects/ladia/1.JPG"
                             alt=""
                           />
+                        </li>
+
+                        <li class="ss-carousel__item imgBlock">
+                          <img
+                            class="ss-carousel__item__image"
+                            src="/projects/ladia/5.JPG"
+                            alt=""
+                          />
+                        </li>
+                        <li class="ss-carousel__item videoBlock">
+                          <video muted autoplay loop>
+                            <source
+                              src="/projects/ladia/Ladia Site Evalution.mp4"
+                              type="video/mp4"
+                              poster="/images/blank.png"
+                            />
+
+                            Your browser does not support the video tag.
+                          </video>
                         </li>
                         <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
@@ -1142,10 +1161,18 @@
                             </p>
                           </div>
                         </li>
+                        <li class="ss-carousel__item imgBlock vertical">
+                          <img
+                            class="ss-carousel__item__image"
+                            src="/projects/ladia/11.jpg"
+                            alt=""
+                          />
+                        </li>
+
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/ladia/Ladia Reel 2 Music Change.mp4"
+                              src="/projects/ladia/Ladia - Display Rack.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -1154,31 +1181,16 @@
                           </video>
                         </li>
 
-                        <li class="ss-carousel__item imgBlock">
-                          <img
-                            class="ss-carousel__item__image"
-                            src="/projects/ladia/2.jpg"
-                            alt=""
-                          />
-                        </li>
                         <li class="ss-carousel__item videoBlock">
-                          <video muted="" autoplay="" loop="">
+                          <video muted autoplay loop>
                             <source
-                              src="/projects/ladia/Ladia Site Annimation.mp4"
+                              src="/projects/ladia/Ladia - Cashcounter.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
 
                             Your browser does not support the video tag.
                           </video>
-                        </li>
-
-                        <li class="ss-carousel__item imgBlock">
-                          <img
-                            class="ss-carousel__item__image"
-                            src="/projects/ladia/3.JPG"
-                            alt=""
-                          />
                         </li>
 
                         <li class="ss-carousel__item videoBlock">
@@ -1192,26 +1204,10 @@
                             Your browser does not support the video tag.
                           </video>
                         </li>
-
-                        <li class="ss-carousel__item imgBlock">
-                          <img
-                            class="ss-carousel__item__image"
-                            src="/projects/ladia/4.JPG"
-                            alt=""
-                          />
-                        </li>
-
-                        <li class="ss-carousel__item imgBlock">
-                          <img
-                            class="ss-carousel__item__image"
-                            src="/projects/ladia/5.JPG"
-                            alt=""
-                          />
-                        </li>
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/ladia/Ladia - Display Rack.mp4"
+                              src="/projects/ladia/Ladia Reel 2 Music Change.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -1219,6 +1215,7 @@
                             Your browser does not support the video tag.
                           </video>
                         </li>
+
                         <li class="ss-carousel__item imgBlock">
                           <img
                             class="ss-carousel__item__image"
@@ -1235,98 +1232,6 @@
                           />
                         </li>
 
-                        <li class="ss-carousel__item imgBlock">
-                          <img
-                            class="ss-carousel__item__image"
-                            src="/projects/ladia/8.JPG"
-                            alt=""
-                          />
-                        </li>
-
-                        <li class="ss-carousel__item videoBlock">
-                          <video muted autoplay loop>
-                            <source
-                              src="/projects/ladia/Ladia - Cashcounter.mp4"
-                              type="video/mp4"
-                              poster="/images/blank.png"
-                            />
-
-                            Your browser does not support the video tag.
-                          </video>
-                        </li>
-
-                        <li class="ss-carousel__item imgBlock">
-                          <img
-                            class="ss-carousel__item__image"
-                            src="/projects/ladia/9.png"
-                            alt=""
-                          />
-                        </li>
-
-                        <li class="ss-carousel__item videoBlock">
-                          <video muted autoplay loop>
-                            <source
-                              src="/projects/ladia/Chandilier.mp4"
-                              type="video/mp4"
-                              poster="/images/blank.png"
-                            />
-
-                            Your browser does not support the video tag.
-                          </video>
-                        </li>
-
-                        <li class="ss-carousel__item imgBlock">
-                          <img
-                            class="ss-carousel__item__image"
-                            src="/projects/ladia/10.JPG"
-                            alt=""
-                          />
-                        </li>
-
-                        <li class="ss-carousel__item imgBlock vertical">
-                          <img
-                            class="ss-carousel__item__image"
-                            src="/projects/ladia/11.jpg"
-                            alt=""
-                          />
-                        </li>
-
-                        <li class="ss-carousel__item slideBlock">
-                          <div class="swiper mySwiper">
-                            <div class="swiper-wrapper">
-                              <div class="swiper-slide">
-                                <img
-                                  class="ss-carousel__item__image"
-                                  src="/projects/ladia/12.jpg"
-                                  alt=""
-                                />
-                              </div>
-                              <div class="swiper-slide">
-                                <img
-                                  class="ss-carousel__item__image"
-                                  src="/projects/ladia/13.jpg"
-                                  alt=""
-                                />
-                              </div>
-                              <div class="swiper-slide">
-                                <img
-                                  class="ss-carousel__item__image"
-                                  src="/projects/ladia/14.jpg"
-                                  alt=""
-                                />
-                              </div>
-                              <div class="swiper-slide">
-                                <img
-                                  class="ss-carousel__item__image"
-                                  src="/projects/ladia/15.jpg"
-                                  alt=""
-                                />
-                              </div>
-                            </div>
-                            <div class="swiper-pagination"></div>
-                          </div>
-                        </li>
-
                         <li class="ss-carousel__item mapBlock">
                           <!-- <div id="map"></div> -->
                           <iframe
@@ -1339,105 +1244,7 @@
                             referrerpolicy="no-referrer-when-downgrade"
                           ></iframe>
                         </li>
-                        <li class="ss-carousel__item textBlock">
-                          <h3>Originality</h3>
-                          <p>
-                            This look is a new interpretation of luxury retail,
-                            taken from ocean pearl-inspired design elements that
-                            capture the uniqueness and beauty of lab-grown
-                            diamonds. The wave-formed chandelier featuring
-                            droplet forms is a great anchor for the story. The
-                            curved display fixtures that incorporate structural
-                            pillars further facilitate the flow in space, with
-                            brass touches and backlit onyx marble that add
-                            sophistication. This balanced composition of form
-                            and material not only enriches the retail experience
-                            but also emotionally and visually connects.
-                          </p>
-                        </li>
 
-                        <li class="ss-carousel__item textBlock">
-                          <h3>Innovation</h3>
-                          <p>
-                            By converting structural columns into fashionable
-                            design features, the layered wave-shaped display
-                            racks introduce fluidity and depth, creating product
-                            presentation that is truly exceptional. The cash
-                            counter seamlessly integrates into the overall
-                            design by curving around adjacent pillars,
-                            harmoniously combining functionality with beauty.
-                            These innovative solutions confront spatial issues
-                            head-on, bestowing the space with a distinctive
-                            character.
-                          </p>
-                          <h3>Contextual Reference</h3>
-                          <p>
-                            Located in an urban context with metro-train pillars
-                            to block the path, the store's facade displays
-                            eye-catching co-lights in bold configurations to
-                            maximize visibility and build a bold identity amidst
-                            visual noise. This smart lighting guarantees the
-                            brand makes a statement, even amidst all the
-                            distractions surrounding it.
-                          </p>
-                        </li>
-
-                        <!-- <li class="ss-carousel__item imgBlock">
-                          <img
-                            class="ss-carousel__item__image"
-                            src="/projects/amyra/12.jpg"
-                            alt=""
-                          />
-                        </li>
-                        <li class="ss-carousel__item imgBlock">
-                          <img
-                            class="ss-carousel__item__image"
-                            src="/projects/amyra/13.jpg"
-                            alt=""
-                          />
-                        </li>
-                        <li class="ss-carousel__item imgBlock vCenter">
-                          <img
-                            class="ss-carousel__item__image"
-                            src="/projects/amyra/14.jpg"
-                            alt=""
-                          />
-                        </li>
-                        <li class="ss-carousel__item imgBlock vCenter">
-                          <img
-                            class="ss-carousel__item__image"
-                            src="/projects/amyra/15.jpg"
-                            alt=""
-                          />
-                        </li> -->
-                        <li class="ss-carousel__item textBlock">
-                          <h3>Sensorial and Spatial Experience</h3>
-                          <p>
-                            The store offers a seamless customer experience,
-                            with curved racks that lead customers smoothly
-                            through the space. The onyx marble with back
-                            lighting provides a deep tactile sense, making the
-                            atmosphere welcoming. Light, texture, and form
-                            together create an experience that is not only
-                            memorable but also emotionally evocative.
-                          </p>
-                        </li>
-
-                        <li class="ss-carousel__item textBlock">
-                          <h3>Creativity</h3>
-                          <p>
-                            The wall-mounted jewellery-stand, designed as an
-                            elegant capsule sculpted from a cylindrical form,
-                            stands out with its distinctive charm.
-                          </p>
-                          <h3>Functionality</h3>
-                          <p>
-                            A central seating area, sculpted in an organic form,
-                            enhances the space's appeal, while the cash counter,
-                            strategically placed on the left, ensures optimal
-                            visibility.
-                          </p>
-                        </li>
                         <li class="ss-carousel__item teamBlock threeGrid">
                           <div class="teamlist">
                             <div>
@@ -1450,9 +1257,8 @@
                               <p>Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
                               <p>Rakesh CH</p>
-                            </div>
-                            <div>
-                              <h5>Project Team</h5>
+
+                              <h5 class="subHead2">Project Team</h5>
                               <p>Ravi Kumar K</p>
                               <p>Abdul</p>
                               <p>Pavan P NSK</p>
@@ -1464,6 +1270,7 @@
                               <p>Chandan Halder</p>
                               <p>Somisetty Baby Sushma</p>
                             </div>
+
                             <div>
                               <h5>Project Incharge</h5>
                               <p>Sai</p>
