--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/amyra/Amyra - Wall Racks.mp4"
+                              src="/projects/amyra/Amyra-Wall-Racks.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
