--- a/index.html
+++ b/index.html
@@ -986,8 +986,8 @@
                               <h5 class="subHead2">
                                 Project Architect, Concept
                               </h5>
-                              <p>Pranay Mithilesh Pulipati</p>
-                              <p>Medha Pulipati</p>
+                              <p>Ar. Pranay Mithilesh Pulipati</p>
+                              <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
                               <p>Rakesh CH</p>
 
@@ -995,7 +995,7 @@
                               <p>Ravi Kumar K</p>
                               <p>Abdul</p>
                               <p>Pavan P NSK</p>
-                              <p>Vaishnavi Basireddy</p>
+                              <p>Ar. Vaishnavi Basireddy</p>
                               <p>Krishna Kanth P</p>
                               <p>Rajib roy</p>
                               <p>Keshav G</p>
@@ -1031,7 +1031,7 @@
                 <div class="firstSection">
                   <div class="basicInfo">
                     <div class="icon">
-                      <img src="/projects/ladia/Ladia_Logo.jpg" />
+                      <img src="/projects/ladia/Ladia_Logo_01.jpg" />
                     </div>
                     <div class="projectTitleInfo">
                       <h3 class="projectTitle">Ladia - Lab Grown Diamonds</h3>
@@ -1061,14 +1061,14 @@
                           <div class="basicInfo">
                             <div>
                               <div class="icon">
-                                <img src="/projects/ladia/Ladia_Logo.jpg" />
+                                <img src="/projects/ladia/Ladia_Logo_01.jpg" />
                               </div>
                               <div class="projectTitleInfo">
                                 <h3 class="projectTitle">
                                   Ladia - Lab Grown Diamonds
                                 </h3>
                                 <p class="location">JUBILEE HILLS,PUNJAGUTTA</p>
-                                <p class="location">2024</p>
+                                <p class="location">2023</p>
                               </div>
                             </div>
                             <div class="moreInfo">
@@ -1115,6 +1115,19 @@
                             alt=""
                           />
                         </li>
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              This lab-grown diamond boutique blends luxury with
+                              contemporary design, inspired by oceanic pearls
+                              and calming blues. A sculptural chandelier and
+                              curved display racks transform challenges into
+                              artistic features. Subtle brass accents and
+                              optimized circulation elevate the brand experience
+                              beautifully.
+                            </p>
+                          </div>
+                        </li>
 
                         <li class="ss-carousel__item imgBlock">
                           <img
@@ -1122,6 +1135,17 @@
                             src="/projects/ladia/5.JPG"
                             alt=""
                           />
+                        </li>
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              Curved racks guide customers smoothly through the
+                              space, enhancing the seamless experience. Backlit
+                              onyx marble adds rich texture and warmth to the
+                              atmosphere. Light, texture, and form combine to
+                              create a memorable, emotional journey.
+                            </p>
+                          </div>
                         </li>
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
@@ -1137,27 +1161,12 @@
                         <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
                             <p>
-                              The interior of this lab-grown diamond boutique
-                              rediscovers the customer experience through the
-                              synthesis of luxury and contemporary. Taking cue
-                              from oceanic pearls that evoke the scarcity and
-                              beauty of diamonds, the atmosphere is enveloped in
-                              calming blues that ooze sophistication. The
-                              sculptural focal point, in the form of a beautiful
-                              chandelier designed as a wave with water droplet
-                              motifs falling over each other, reinforces the
-                              theme of the element. Subtle brass accents add a
-                              touch of opulence, creating a beautiful contrast.
-                              What were once structural columns that posed a
-                              challenge have been cleverly transformed into
-                              curved display racks that wrap around the pillars,
-                              enhancing the flow and showcasing the products
-                              beautifully. Even with a compact layout, the
-                              design is optimized for easy circulation and
-                              visual openness. This method elegantly merges
-                              artistic narrative with functional brilliance,
-                              taking the brand identity and customer experience
-                              to a higher level.
+                              Site set in a busy urban area, the store’s facade
+                              uses bold co-light configurations to command
+                              attention. Smart lighting ensures strong
+                              visibility and a standout brand identity. It makes
+                              a striking statement amid surrounding
+                              distractions.
                             </p>
                           </div>
                         </li>
@@ -1169,7 +1178,7 @@
                           />
                         </li>
 
-                        <li class="ss-carousel__item videoBlock">
+                        <li class="ss-carousel__item videoBlock overlyText">
                           <video muted autoplay loop>
                             <source
                               src="/projects/ladia/Ladia - Display Rack.mp4"
@@ -1179,9 +1188,20 @@
 
                             Your browser does not support the video tag.
                           </video>
+                          <p>
+                            Layered wave-shaped display racks transform
+                            structural columns into fluid, dynamic showcases.
+                            These innovation turn spatial challenges into
+                            standout design features.
+                          </p>
                         </li>
+                        <!-- <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
 
-                        <li class="ss-carousel__item videoBlock">
+                          </div>
+                        </li> -->
+
+                        <li class="ss-carousel__item videoBlock overlyText">
                           <video muted autoplay loop>
                             <source
                               src="/projects/ladia/Ladia - Cashcounter.mp4"
@@ -1191,7 +1211,18 @@
 
                             Your browser does not support the video tag.
                           </video>
+                          <p>
+                            The curved cash counter blends seamlessly with
+                            adjacent pillars, uniting function and beauty. These
+                            innovation turn spatial challenges into standout
+                            design features.
+                          </p>
                         </li>
+                        <!-- <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                           
+                          </div>
+                        </li> -->
 
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
@@ -1204,6 +1235,16 @@
                             Your browser does not support the video tag.
                           </video>
                         </li>
+
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              The wall-mounted jewellery-stand, designed as an
+                              elegant capsule sculpted from a cylindrical form,
+                              stands out with its distinctive charm.
+                            </p>
+                          </div>
+                        </li>
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
@@ -1214,6 +1255,19 @@
 
                             Your browser does not support the video tag.
                           </video>
+                        </li>
+
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              This design reimagines luxury retail through ocean
+                              pearl-inspired elements, celebrating the beauty of
+                              lab-grown diamonds. A wave-formed chandelier and
+                              curved displays around structural pillars enhance
+                              flow and elegance. Brass accents and backlit onyx
+                              marble create a rich, emotional connection.
+                            </p>
+                          </div>
                         </li>
 
                         <li class="ss-carousel__item imgBlock">
@@ -1230,6 +1284,17 @@
                             src="/projects/ladia/7.JPG"
                             alt=""
                           />
+                        </li>
+
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              A central seating area, sculpted in an organic
+                              form, enhances the space's appeal, while the cash
+                              counter, strategically placed on the left, ensures
+                              optimal visibility.
+                            </p>
+                          </div>
                         </li>
 
                         <li class="ss-carousel__item mapBlock">
@@ -1253,8 +1318,8 @@
                               <h5 class="subHead2">
                                 Project Architect, Concept
                               </h5>
-                              <p>Pranay Mithilesh Pulipati</p>
-                              <p>Medha Pulipati</p>
+                              <p>Ar. Pranay Mithilesh Pulipati</p>
+                              <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
                               <p>Rakesh CH</p>
 
@@ -1262,7 +1327,8 @@
                               <p>Ravi Kumar K</p>
                               <p>Abdul</p>
                               <p>Pavan P NSK</p>
-                              <p>Vaishnavi Basireddy</p>
+                              <p>Ar. Chennakeshava.R</p>
+                              <p>Ar. Vaishnavi Basireddy</p>
                               <p>Krishna Kanth P</p>
                               <p>Rajib roy</p>
                               <p>Keshav G</p>
@@ -2292,6 +2358,67 @@
             <!-- Projects Grid-->
           </div>
           <!-- Grid Container-->
+
+          <footer class="footer">
+            <div class="footer-section">
+              <div class="footer-link" data-target="emailSection">
+                Email <span class="toggle">+</span>
+              </div>
+              <div class="sub-content" id="emailSection">
+                <p>New Projects: xyz.email.com</p>
+                <p>Press: xyz.email.com</p>
+                <p>Complaints: xyz.email.com</p>
+              </div>
+            </div>
+
+            <div class="footer-section">
+              <div class="footer-link" data-target="officeSection">
+                Offices <span class="toggle">+</span>
+              </div>
+              <div class="sub-content" id="officeSection">
+                <div id="hyderabadAddress">
+                  <p>Hyderabad: XYZ Address</p>
+                  <p class="sub-toggle" onclick="toggleAddress()">
+                    Vijayawada +
+                  </p>
+                  <p class="sub-toggle" onclick="toggleAddressTamil()">
+                    Tamilnadu +
+                  </p>
+                </div>
+                <div id="vijayawadaAddress" style="display: none">
+                  <p>Vijayawada: XYZ Address</p>
+                </div>
+                <div id="tamilnaduAddress" style="display: none">
+                  <p>Tamilnadu: XYZ Address</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="footer-section">
+              <div class="footer-link" data-target="socialSection">
+                Social <span class="toggle">+</span>
+              </div>
+              <div class="sub-content" id="socialSection">
+                <p>Facebook</p>
+                <p>Twitter</p>
+                <p>LinkedIn</p>
+                <p>Instagram</p>
+                <p>Youtube</p>
+              </div>
+            </div>
+
+            <div class="footer-section">
+              <div class="footer-link" data-target="copyrightSection">
+                Copyright <span class="toggle">+</span>
+              </div>
+              <div class="sub-content" id="copyrightSection">
+                <p>Privacy Policy</p>
+                <p>Terms of Use</p>
+                <p>Legal Disclaimer</p>
+                <p>Cookie Policy</p>
+              </div>
+            </div>
+          </footer>
         </div>
         <!-- Container-->
       </div>
@@ -2299,6 +2426,39 @@
     </div>
     <!-- Main Wrapper-->
     <style>
+      .footer {
+        padding: 30px;
+        text-align: center;
+      }
+
+      .footer-section {
+        margin: 10px 0;
+      }
+
+      .footer-link {
+        cursor: pointer;
+        font-size: 20px;
+        margin: 10px 0;
+        display: inline-block;
+        position: relative;
+      }
+
+      .footer-link .toggle {
+        margin-left: 10px;
+        transition: transform 0.3s ease;
+      }
+
+      .sub-content {
+        display: none;
+        margin-top: 10px;
+        font-size: 16px;
+      }
+
+      .sub-toggle {
+        color: #00bcd4;
+        cursor: pointer;
+        margin-top: 10px;
+      }
       .ss-carousel {
         padding: 24px 0px;
         background-color: #fff;
@@ -2381,7 +2541,7 @@
       .ss-carousel .ss-carousel__item.imgBlock.vertical {
         min-width: 40vw;
         text-align: center;
-        background-color: #f7f7f7;
+        background-color: #fff;
       }
       .ss-carousel .ss-carousel__item.imgBlock.vertical img {
         height: 100% !important;
@@ -2996,6 +3156,47 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
           clickable: true,
         },
       });
+    </script>
+    <script>
+      // Toggle Main Sections
+      document.querySelectorAll(".footer-link").forEach((link) => {
+        link.addEventListener("click", function () {
+          const targetId = this.getAttribute("data-target");
+          const subContent = document.getElementById(targetId);
+          const toggleSymbol = this.querySelector(".toggle");
+
+          // Close all open sections first
+          document.querySelectorAll(".sub-content").forEach((content) => {
+            if (content.id !== targetId) content.style.display = "none";
+          });
+          document.querySelectorAll(".toggle").forEach((toggle) => {
+            if (toggle !== toggleSymbol) toggle.textContent = "+";
+          });
+
+          // Toggle current section
+          if (subContent.style.display === "block") {
+            subContent.style.display = "none";
+            toggleSymbol.textContent = "+";
+          } else {
+            subContent.style.display = "block";
+            toggleSymbol.textContent = "-";
+          }
+        });
+      });
+
+      // Toggle Vijayawada Address
+      function toggleAddress() {
+        document.getElementById("hyderabadAddress").style.display = "none";
+        document.getElementById("vijayawadaAddress").style.display = "block";
+        document.getElementById("tamilnaduAddress").style.display = "none";
+      }
+
+      // Toggle Tamilnadu Address
+      function toggleAddressTamil() {
+        document.getElementById("hyderabadAddress").style.display = "none";
+        document.getElementById("vijayawadaAddress").style.display = "none";
+        document.getElementById("tamilnaduAddress").style.display = "block";
+      }
     </script>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
